# GEX_suite

./: .gitignore  CLAUDE.md  README.md  main.py  publish-to-public.sh  pyproject.toml  requirements-build.txt  requirements.txt  run_on_mac.sh
gex_suite/: __init__.py
gex_suite/api/: __init__.py  models.py  server.py
gex_suite/api/routes/: chain.py  paste.py  scraper.py
gex_suite/app/: main_window.py  theme.py
gex_suite/data/scraper/: settings.json  ticker_list_index.txt  tickers.json
gex_suite/data/tradingview/: auto_paste_config.json
gex_suite/data/tradingview/debug/: cleanup_remove_incomplete.html  favorite_not_found.html  layout_dialog_open_failed.html  layout_row_first.html  open_or_create_created_missing_start_field.html  open_or_create_new_row_delta_missing.html  (+4 more)
gex_suite/modules/chart/: __init__.py  __main__.py  cli.py  importers.py  ohlc.py  parser.py  plot.py  widget.py
gex_suite/modules/scraper/: __init__.py  __main__.py  cli.py  file_viewer.py  gamma_parse.py  runner.py  ticker_manager_dialog.py  utils.py  widget.py
gex_suite/modules/tradingview/: __init__.py  __main__.py  automator.py  cli.py  engine.py  quote_source.py  run_log.py  widget.py
gex_suite/shared/: config.py  db.py  paths.py  updater.py
scripts/: gex_suite.spec
tests/: smoke_test.py  test_tradingview_indicator_matching.py  test_tradingview_time_rules.py
tools/: tv_cdp_bkr_cleanup_debug.py  tv_cdp_bkr_debug.py  tv_cdp_bkr_remove_debug.py  tv_cdp_debug_probe.py  tv_cdp_legend_expand_debug.py  tv_cdp_open_or_create_smoke.py  tv_cdp_phaseb_delta_debug.py  tv_legend_probe.py
